<resources>
    <string name="app_name">Takeouts</string>
    <string name="tVSplash">We will feed you\nAnytime Anywhere</string>
    <string name="iVLogoSplash">Logo of the app on the splash screen</string>
    <string name="tVLogIn">Log In</string>
    <string name="tVSignUp">Sign Up</string>
    <string name="eTEmailOrPhoneNo">Email or Phone Number</string>"
    <string name="etNameSignUp">Name</string>
    <string name="etEmailSignUp">Email</string>
    <string name="etPhoneNoSignUp">Phone No</string>
    <string name="etPasswordSignUp">Password</string>
    <string name="eTLogInPassword">Password</string>
    <string name="tVFiller00InLogInActivity">Or\nSign In with</string>
    <string name="tVFiller00InSignUpActivity">Or\nCreate an account using</string>
    <string name="tVGoogleLogIn">Google</string>
    <string name="btnLogIn">Log In</string>
    <string name="btnSetLocation"> Set\nLocation </string>
    <string name="btnSignUp">Sign Up</string>
    <string name="iVGoogleLogo">Google Logo</string>
    <string name="tVSignUpOption">Don\'t have an account?\nSign Up</string>
    <string name="tVAlreadyHaveAnAc">Already have an account?</string>
    <string name="tVChooseYourLocation">Choose Your Location</string>
    <string name="autocomplete_tVChooseLocation">Choose Location</string>
    <string name="tVWhyLocation">Please select your location,\n so that we can reach you.</string>
    <string name="tVTagline">Takeouts - anytime, anywhere</string>
    <string name="iVNotifications">Notifications Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tVPopular">Popular Options</string>
    <string name="tVViewMenu">View Menu</string>
    <string name="tVAddToCart">Add to Cart</string>
    <string name="tVFragmentBasket">Basket</string>
    <string name="btnFragmentBasket">Proceed</string>
    <string name="tVNameOfFoodInBasket">Item Name</string>
    <string name="tVPriceOfFoodInBasket">Item Price</string>
    <string name="tVNoOfFoodItemsInBasket">1</string>
    <string name="tVFragmentBottomSheet">Menu</string>


</resources>