<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tVSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/spicy_rice"
        android:text="@string/tVSignUp"
        android:textColor="@color/text_green"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVSignUp">

        <ImageView
            android:id="@+id/iVUserName"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/eTNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/peralta"
            android:hint="@string/etNameSignUp"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/text_green"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutName">

        <ImageView
            android:id="@+id/iVUserEmail"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:src="@drawable/envelope" />

        <EditText
            android:id="@+id/eTEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/peralta"
            android:hint="@string/etEmailSignUp"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/text_green"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPhoneNo"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">

        <ImageView
            android:id="@+id/iVUserPhoneNo"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:src="@drawable/phone_rotary" />

        <EditText
            android:id="@+id/eTPhoneNoSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/peralta"
            android:hint="@string/etPhoneNoSignUp"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/text_green"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPhoneNo">

        <ImageView
            android:id="@+id/iVUserPassword"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/eTPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/peralta"
            android:hint="@string/etPasswordSignUp"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/text_green"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tVFiller00SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/peralta"
        android:text="@string/tVFiller00InSignUpActivity"
        android:textAlignment="center"
        android:textColor="@color/text_green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword" />


    <LinearLayout
        android:id="@+id/linearLayoutGoogleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVFiller00SignUp">

        <ImageView
            android:id="@+id/iVGoogleLogoSignUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/iVGoogleLogo"
            app:srcCompat="@drawable/google" />

        <TextView
            android:id="@+id/tVGoogleSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/spicy_rice"
            android:text="@string/tVGoogleLogIn"
            android:textColor="@color/text_green"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVFiller00SignUp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/spicy_rice"
        android:text="@string/btnSignUp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutGoogleSignUp" />

    <TextView
        android:id="@+id/tVAlreadyHaveAnAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/peralta"
        android:text="@string/tVAlreadyHaveAnAc"
        android:textAlignment="center"
        android:textColor="@color/text_green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>