<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".ChooseLocationActivity">

    <TextView
        android:id="@+id/tVChooseYourLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/spicy_rice"
        android:text="@string/tVChooseYourLocation"
        android:textColor="@color/text_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_background"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/down_arrow_1_"
        app:endIconMinSize="60dp"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVChooseYourLoc">


        <AutoCompleteTextView
            android:id="@+id/listOfLocation"
            style="@style/MyAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:fontFamily="@font/bricolage_grotesque_semibold"
            android:gravity="center_vertical"
            android:inputType="none"
            android:text="@string/autocomplete_tVChooseLocation"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSetLocation"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/spicy_rice"
        android:paddingLeft="4dp"
        android:paddingTop="5dp"
        android:paddingRight="4dp"
        android:paddingBottom="5dp"
        android:text="@string/btnSetLocation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tVWhyLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tVWhyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/amita_bold"
        android:text="@string/tVWhyLocation"
        android:textColor="@color/text_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>